--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-gunicorn 
-flask
-flask_sqlalchemy
-flask_cors
-gunicorn
-psycopg2-binary
-cloudinary
+#gunicorn 
+#flask
+#flask_sqlalchemy
+#lask_cors
+#gunicorn
+#psycopg2-binary
+#cloudinary
+
+gunicorn==21.2.0
+flask==3.0.0
+flask-sqlalchemy==3.1.1
+flask-cors==4.0.0
+flask-limiter==3.5.0
+psycopg2-binary==2.9.9
+cloudinary==1.36.0
+Pillow==10.1.0
