--- a/render.yaml
+++ b/render.yaml
@@ -16,3 +16,9 @@ services:
           property: connectionString
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: FLASK_ENV
+        value: production
+      # Add your Cloudinary credentials in Render dashboard:
+      # CLOUDINARY_CLOUD_NAME
+      # CLOUDINARY_API_KEY  
+      # CLOUDINARY_API_SECRET
