--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,7 @@ services:
   - type: web
     name: monster-feed-backend
     env: python
-    # UPDATED LINE: Run the build script before installing Python packages
-    buildCommand: "./build.sh && pip install -r requirements.txt"
+    buildCommand: "./build.sh && pip install -r requirements.txt" # Keep the build.sh command
     startCommand: "gunicorn app:app"
     envVars:
       - key: DATABASE_URL
@@ -16,7 +15,8 @@ services:
           name: monster-db
           property: connectionString
       - key: PYTHON_VERSION
-        value: 3.11.0
+        # UPDATED LINE: Use a more general version string
+        value: 3.11 
       - key: FLASK_ENV
         value: production
       # Add your Cloudinary credentials in Render dashboard:
