--- a/render.yaml
+++ b/render.yaml
@@ -7,15 +7,15 @@ services:
   - type: web
     name: monster-feed-backend
     env: python
-    buildCommand: "./build.sh && pip install -r requirements.txt" # Keep the build.sh command
-    startCommand: "gunicorn app:app"
+    buildCommand: "./build.sh && pip install -r requirements.txt"
+    # UPDATED LINE: Use the more robust Gunicorn command from your Procfile
+    startCommand: "gunicorn app:app --workers 2 --timeout 120 --keep-alive 5 --max-requests 1000 --preload"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: monster-db
           property: connectionString
       - key: PYTHON_VERSION
-        # UPDATED LINE: Use a more general version string
         value: 3.11 
       - key: FLASK_ENV
         value: production
